Resorted layout issue with 0 products found when filtering.

--- a/client/src/app/shop/product-item/product-item.component.scss
+++ b/client/src/app/shop/product-item/product-item.component.scss
@@ -4,13 +4,7 @@ $montserrat-font: 'Montserrat', sans-serif;
 
 
 
-.card-product {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  margin: auto;
-  text-align: center;
-  font-family: $montserrat-font;
-}
+
 
 //Test section
 .product-card {
