--- a/client/src/app/shop/shop.component.scss
+++ b/client/src/app/shop/shop.component.scss
@@ -7,57 +7,68 @@ $montserrat-font: 'Montserrat', sans-serif;
 .container-shop {
     display: flex;
     justify-content: center;
+    padding-left: 2em;
+    padding-right: 2em;
 
  }
 
-.card-grid {
+.products-holder {
+  flex: 0 0 55%;
+  max-width: 75%;
 
-   justify-content: center;
 
-   display: grid;
-
-   grid-template-columns: repeat(3, 0.1fr);
-
-   grid-auto-rows: auto;
-
-   grid-gap: 0;
-
-  }
-
-.product-listing {
-  display: flex;
-  justify-content: center;
-  //border: 2px solid red;
-  position: relative;
 }
+
+
+
+ .card-grid {
+  //border: 2px solid red;
+
+  max-width: 1220px;
+  padding-right: 2em;
+  margin-right: 2em;
+  display: grid;
+  gap: 0.1rem;
+
+
+ }
+
+@media (min-width: 600px) {
+  .card-grid { grid-template-columns: repeat(2, 1fr); }
+}
+
+@media (min-width: 1215px) {
+  .card-grid { grid-template-columns: repeat(3, 1fr); }
+}
+
+
 
 .tempMenu {
-  //border: 2px solid green;
+
+
   display: block;
+  flex-direction: column;
+
   position: relative;
+
+
   height: 100%;
-  width: 250px;
+  margin-right: 2em;
+  max-width: fit-content;
+
 }
 
-
-
-
-  .filter-menu-bar {
-
-   border: 2px solid rebeccapurple;
-
-   justify-content: center;
-   display: flex;
-   width: 20%;
-   height: 100%;
-   border-radius: 5px;
-
+@media (max-width: 900px) {
+  .tempMenu {
+    display: none;
   }
+}
+
 
   .filter-header {
 
     display: flex;
-    z-index: 12;
+    //z-index: 12;
     align-content: center;
     justify-content: space-between;
 
@@ -119,9 +130,7 @@ $montserrat-font: 'Montserrat', sans-serif;
   margin-top: 10px;
 }
 
-.buttonZero {
-  display: none;
-}
+
 
 .button-28:disabled {
   pointer-events: none;
@@ -141,6 +150,7 @@ $montserrat-font: 'Montserrat', sans-serif;
 
 .filter-ul-items {
   margin-left: -3em;
+  padding-right: 1em;
   :hover {
     text-decoration: underline;
   }
@@ -155,128 +165,4 @@ $montserrat-font: 'Montserrat', sans-serif;
 }
 
 
-//Grid stuff
-.wrapper {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
 
-}
-.sidebar-pane {
-  grid-column: 1;
-  grid-row: 1;
-}
-.products-pane {
-  grid-column: 2 ;
-  grid-row: 1;
-}
-
-.product-card-wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-columns: auto;
-}
-
-.product-card--holder {
-  grid-column: 1;
-  grid-row: 1;
-}
-
-.container-filter {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 3em;
-  padding-left: 2em;
-}
-
-.filter-wrapper {
-  position: relative;
-  margin: 0 1.25rem 0 1.875rem;
-}
-
-.filter-listing {
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-
-
-
-
-}
-
-.filter-title {
-  position: relative;
-}
-
-.filter-headline-label {
-  margin-left: 1em;
-}
-
-.filter-icon-svg {
-  padding-top: 0.15em;
-}
-
-//test wrapper
-
-
-.main-wrapper {
-  display: flex;
-  position: relative;
-}
-
-
-
-
-
-.product-card-wrapper {
-  //implicit grid
-  border: 2px solid green;
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(3, .1fr);
-}
-
-.wrapped-div {
-  display: flex;
-  justify-content: center;
-  box-sizing: border-box;
-  width: 100%;
-  border: 2px solid green;
-  padding: 10px;
-}
-
-.test-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #353535;
-  font-size: 3rem;
-  color: #fff;
-  box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
-  height: 100%;
-  width: 100%;
-  border-radius: 4px;
-
-}
-
-.filter-stuffz {
-
-  border: 2px solid green;
-  display: flex;
-  align-self: start;
-
-  padding-bottom: 3rem;
-  flex-direction: column;
-}
-// Grid stuff end
-
-//Flex test
-.left-side-filter-items {
-  flex: 0 0 20%;
-  width: 20%;
-  display: block;
-  float: left;
-  padding-left: 1em;
-}
-
-//
